// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form tests renders correctly after selecting All / No Particular in Interested Animals 1`] = `
<div>
  <div
    class="formPageContainer"
  >
    <form
      class="formContainer"
    >
      <h2>
        Adoption Application
      </h2>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="firstNameId"
        >
          <span
            class="required"
          >
            *
          </span>
           First Name:
          <input
            id="firstNameId"
            name="firstName"
            required=""
            type="text"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="lastNameId"
        >
          <span
            class="required"
          >
            *
          </span>
           Last Name:
          <input
            id="lastNameId"
            name="lastName"
            required=""
            type="text"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="emailId"
        >
          <span
            class="required"
          >
            *
          </span>
           Email:
          <input
            id="emailId"
            name="email"
            placeholder="name@email.com"
            required=""
            type="email"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="phoneId"
        >
          <span
            class="required"
          >
            *
          </span>
           Phone:
          <input
            id="phoneId"
            name="phone"
            pattern="[0-9]{10}"
            placeholder="1234567890"
            required=""
            type="tel"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="petListId"
        >
          <span
            class="required"
          >
            *
          </span>
           Interested Animal(s) :
          <select
            class="petSelect"
            id="petListId"
            multiple=""
            name="petList"
            required=""
          >
            <option
              value="any"
            >
              All / No Particular
            </option>
            <option
              value="11111"
            >
              Apollo
            </option>
          </select>
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <p
          class="question"
        >
          <span
            class="required"
          >
            *
          </span>
           What is the type of your current residence (where the pet will live)?
        </p>
        <label
          for="apartment"
        >
          <input
            id="apartment"
            name="residenceType"
            required=""
            type="radio"
            value="yes"
          />
           Apartment/Condo
        </label>
        <label
          for="house"
        >
          <input
            id="house"
            name="residenceType"
            type="radio"
            value="yes"
          />
           House
        </label>
        <label
          for="otherResidence"
        >
          <input
            id="otherResidence"
            name="residenceType"
            type="radio"
            value="yes"
          />
           Other
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="livingSpaceId"
        >
          What is your approximate living space in sq. ft. (where the pet will live)?
          <input
            class="livingSpaceInput"
            id="livingSpaceId"
            min="0"
            placeholder="no decimals"
            type="number"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <p
          class="question"
        >
          <span
            class="required"
          >
            *
          </span>
           Please include any of the followings that is a member of your current household.
        </p>
        <label
          for="householdMemberYes"
        >
          <input
            id="householdMemberYes"
            name="householdMemberGeneral"
            required=""
            type="radio"
            value="childrenOrPets"
          />
           Children or Pets
        </label>
        <label
          for="householdMemberNone"
        >
          <input
            id="householdMemberNone"
            name="householdMemberGeneral"
            type="radio"
            value="none"
          />
           None of the above
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <p
          class="question"
        >
          Which would be the best way to reach you?
        </p>
        <label
          for="byPhoneId"
        >
          <input
            id="byPhoneId"
            name="contactWay"
            type="radio"
            value="phone"
          />
           Phone
        </label>
        <label
          for="byEmailId"
        >
          <input
            id="byEmailId"
            name="contactWay"
            type="radio"
            value="email"
          />
           Email
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <p
          class="question"
        >
          <span
            class="required"
          >
            *
          </span>
           Do you have any experience with the type of animal which you applying for adoption?
        </p>
        <label
          for="yesExperience"
        >
          <input
            id="yesExperience"
            name="petExperience"
            required=""
            type="radio"
            value="yes"
          />
           Yes
        </label>
        <label
          for="noExperience"
        >
          <input
            id="noExperience"
            name="petExperience"
            type="radio"
            value="no"
          />
           No
        </label>
      </div>
      <br />
      <div
        class="formBtnContainer"
      >
        <input
          class="submitBtn"
          type="submit"
          value="Submit"
        />
        <a
          class="cancelBtn"
          href="/petlist"
        >
          Cancel
        </a>
      </div>
    </form>
  </div>
</div>
`;

exports[`Form tests renders correctly after selecting Children or Pets in Current Household Member 1`] = `
<div>
  <div
    class="formPageContainer"
  >
    <form
      class="formContainer"
    >
      <h2>
        Adoption Application
      </h2>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="firstNameId"
        >
          <span
            class="required"
          >
            *
          </span>
           First Name:
          <input
            id="firstNameId"
            name="firstName"
            required=""
            type="text"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="lastNameId"
        >
          <span
            class="required"
          >
            *
          </span>
           Last Name:
          <input
            id="lastNameId"
            name="lastName"
            required=""
            type="text"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="emailId"
        >
          <span
            class="required"
          >
            *
          </span>
           Email:
          <input
            id="emailId"
            name="email"
            placeholder="name@email.com"
            required=""
            type="email"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="phoneId"
        >
          <span
            class="required"
          >
            *
          </span>
           Phone:
          <input
            id="phoneId"
            name="phone"
            pattern="[0-9]{10}"
            placeholder="1234567890"
            required=""
            type="tel"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="petListId"
        >
          <span
            class="required"
          >
            *
          </span>
           Interested Animal(s) :
          <select
            class="petSelect"
            id="petListId"
            multiple=""
            name="petList"
            required=""
          >
            <option
              value="any"
            >
              All / No Particular
            </option>
            <option
              value="11111"
            >
              Apollo
            </option>
          </select>
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <p
          class="question"
        >
          <span
            class="required"
          >
            *
          </span>
           What is the type of your current residence (where the pet will live)?
        </p>
        <label
          for="apartment"
        >
          <input
            id="apartment"
            name="residenceType"
            required=""
            type="radio"
            value="yes"
          />
           Apartment/Condo
        </label>
        <label
          for="house"
        >
          <input
            id="house"
            name="residenceType"
            type="radio"
            value="yes"
          />
           House
        </label>
        <label
          for="otherResidence"
        >
          <input
            id="otherResidence"
            name="residenceType"
            type="radio"
            value="yes"
          />
           Other
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="livingSpaceId"
        >
          What is your approximate living space in sq. ft. (where the pet will live)?
          <input
            class="livingSpaceInput"
            id="livingSpaceId"
            min="0"
            placeholder="no decimals"
            type="number"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <p
          class="question"
        >
          <span
            class="required"
          >
            *
          </span>
           Please include any of the followings that is a member of your current household.
        </p>
        <label
          for="householdMemberYes"
        >
          <input
            id="householdMemberYes"
            name="householdMemberGeneral"
            required=""
            type="radio"
            value="childrenOrPets"
          />
           Children or Pets
        </label>
        <div
          class="houseMemberList"
        >
          <label
            for="householdMemberChildren6"
          >
            <input
              id="householdMemberChildren6"
              name="householdMember"
              type="checkbox"
              value="children6"
            />
             Children: Age Under 6
          </label>
          <label
            for="householdMemberChildren12"
          >
            <input
              id="householdMemberChildren12"
              name="householdMember"
              type="checkbox"
              value="children12"
            />
             Children: Age From 6 - 12
          </label>
          <label
            for="householdMemberChildren18"
          >
            <input
              id="householdMemberChildren18"
              name="householdMember"
              type="checkbox"
              value="children18"
            />
             Children: Age Above 12
          </label>
          <label
            for="householdMemberDog"
          >
            <input
              id="householdMemberDog"
              name="householdMember"
              type="checkbox"
              value="dog"
            />
             Dog(s)
          </label>
          <label
            for="householdMemberCat"
          >
            <input
              id="householdMemberCat"
              name="householdMember"
              type="checkbox"
              value="cat"
            />
             Cat(s)
          </label>
          <p>
            * No need to select checkboxes if your pet is neither cat nor dog.
          </p>
        </div>
        <label
          for="householdMemberNone"
        >
          <input
            id="householdMemberNone"
            name="householdMemberGeneral"
            type="radio"
            value="none"
          />
           None of the above
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <p
          class="question"
        >
          Which would be the best way to reach you?
        </p>
        <label
          for="byPhoneId"
        >
          <input
            id="byPhoneId"
            name="contactWay"
            type="radio"
            value="phone"
          />
           Phone
        </label>
        <label
          for="byEmailId"
        >
          <input
            id="byEmailId"
            name="contactWay"
            type="radio"
            value="email"
          />
           Email
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <p
          class="question"
        >
          <span
            class="required"
          >
            *
          </span>
           Do you have any experience with the type of animal which you applying for adoption?
        </p>
        <label
          for="yesExperience"
        >
          <input
            id="yesExperience"
            name="petExperience"
            required=""
            type="radio"
            value="yes"
          />
           Yes
        </label>
        <label
          for="noExperience"
        >
          <input
            id="noExperience"
            name="petExperience"
            type="radio"
            value="no"
          />
           No
        </label>
      </div>
      <br />
      <div
        class="formBtnContainer"
      >
        <input
          class="submitBtn"
          type="submit"
          value="Submit"
        />
        <a
          class="cancelBtn"
          href="/petlist"
        >
          Cancel
        </a>
      </div>
    </form>
  </div>
</div>
`;

exports[`Form tests renders correctly after selecting Other in Current Residence 1`] = `
<div>
  <div
    class="formPageContainer"
  >
    <form
      class="formContainer"
    >
      <h2>
        Adoption Application
      </h2>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="firstNameId"
        >
          <span
            class="required"
          >
            *
          </span>
           First Name:
          <input
            id="firstNameId"
            name="firstName"
            required=""
            type="text"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="lastNameId"
        >
          <span
            class="required"
          >
            *
          </span>
           Last Name:
          <input
            id="lastNameId"
            name="lastName"
            required=""
            type="text"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="emailId"
        >
          <span
            class="required"
          >
            *
          </span>
           Email:
          <input
            id="emailId"
            name="email"
            placeholder="name@email.com"
            required=""
            type="email"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="phoneId"
        >
          <span
            class="required"
          >
            *
          </span>
           Phone:
          <input
            id="phoneId"
            name="phone"
            pattern="[0-9]{10}"
            placeholder="1234567890"
            required=""
            type="tel"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="petListId"
        >
          <span
            class="required"
          >
            *
          </span>
           Interested Animal(s) :
          <select
            class="petSelect"
            id="petListId"
            multiple=""
            name="petList"
            required=""
          >
            <option
              value="any"
            >
              All / No Particular
            </option>
            <option
              value="11111"
            >
              Apollo
            </option>
          </select>
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <p
          class="question"
        >
          <span
            class="required"
          >
            *
          </span>
           What is the type of your current residence (where the pet will live)?
        </p>
        <label
          for="apartment"
        >
          <input
            id="apartment"
            name="residenceType"
            required=""
            type="radio"
            value="yes"
          />
           Apartment/Condo
        </label>
        <label
          for="house"
        >
          <input
            id="house"
            name="residenceType"
            type="radio"
            value="yes"
          />
           House
        </label>
        <label
          for="otherResidence"
        >
          <input
            id="otherResidence"
            name="residenceType"
            type="radio"
            value="yes"
          />
           Other
          <input
            class="hiddenInput"
            id="otherResidenceDetail"
            name="residenceType"
            placeholder="optional"
            type="text"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="livingSpaceId"
        >
          What is your approximate living space in sq. ft. (where the pet will live)?
          <input
            class="livingSpaceInput"
            id="livingSpaceId"
            min="0"
            placeholder="no decimals"
            type="number"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <p
          class="question"
        >
          <span
            class="required"
          >
            *
          </span>
           Please include any of the followings that is a member of your current household.
        </p>
        <label
          for="householdMemberYes"
        >
          <input
            id="householdMemberYes"
            name="householdMemberGeneral"
            required=""
            type="radio"
            value="childrenOrPets"
          />
           Children or Pets
        </label>
        <label
          for="householdMemberNone"
        >
          <input
            id="householdMemberNone"
            name="householdMemberGeneral"
            type="radio"
            value="none"
          />
           None of the above
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <p
          class="question"
        >
          Which would be the best way to reach you?
        </p>
        <label
          for="byPhoneId"
        >
          <input
            id="byPhoneId"
            name="contactWay"
            type="radio"
            value="phone"
          />
           Phone
        </label>
        <label
          for="byEmailId"
        >
          <input
            id="byEmailId"
            name="contactWay"
            type="radio"
            value="email"
          />
           Email
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <p
          class="question"
        >
          <span
            class="required"
          >
            *
          </span>
           Do you have any experience with the type of animal which you applying for adoption?
        </p>
        <label
          for="yesExperience"
        >
          <input
            id="yesExperience"
            name="petExperience"
            required=""
            type="radio"
            value="yes"
          />
           Yes
        </label>
        <label
          for="noExperience"
        >
          <input
            id="noExperience"
            name="petExperience"
            type="radio"
            value="no"
          />
           No
        </label>
      </div>
      <br />
      <div
        class="formBtnContainer"
      >
        <input
          class="submitBtn"
          type="submit"
          value="Submit"
        />
        <a
          class="cancelBtn"
          href="/petlist"
        >
          Cancel
        </a>
      </div>
    </form>
  </div>
</div>
`;

exports[`Form tests renders correctly after selecting Phone in Best Way to Reach 1`] = `
<div>
  <div
    class="formPageContainer"
  >
    <form
      class="formContainer"
    >
      <h2>
        Adoption Application
      </h2>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="firstNameId"
        >
          <span
            class="required"
          >
            *
          </span>
           First Name:
          <input
            id="firstNameId"
            name="firstName"
            required=""
            type="text"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="lastNameId"
        >
          <span
            class="required"
          >
            *
          </span>
           Last Name:
          <input
            id="lastNameId"
            name="lastName"
            required=""
            type="text"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="emailId"
        >
          <span
            class="required"
          >
            *
          </span>
           Email:
          <input
            id="emailId"
            name="email"
            placeholder="name@email.com"
            required=""
            type="email"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="phoneId"
        >
          <span
            class="required"
          >
            *
          </span>
           Phone:
          <input
            id="phoneId"
            name="phone"
            pattern="[0-9]{10}"
            placeholder="1234567890"
            required=""
            type="tel"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="petListId"
        >
          <span
            class="required"
          >
            *
          </span>
           Interested Animal(s) :
          <select
            class="petSelect"
            id="petListId"
            multiple=""
            name="petList"
            required=""
          >
            <option
              value="any"
            >
              All / No Particular
            </option>
            <option
              value="11111"
            >
              Apollo
            </option>
          </select>
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <p
          class="question"
        >
          <span
            class="required"
          >
            *
          </span>
           What is the type of your current residence (where the pet will live)?
        </p>
        <label
          for="apartment"
        >
          <input
            id="apartment"
            name="residenceType"
            required=""
            type="radio"
            value="yes"
          />
           Apartment/Condo
        </label>
        <label
          for="house"
        >
          <input
            id="house"
            name="residenceType"
            type="radio"
            value="yes"
          />
           House
        </label>
        <label
          for="otherResidence"
        >
          <input
            id="otherResidence"
            name="residenceType"
            type="radio"
            value="yes"
          />
           Other
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="livingSpaceId"
        >
          What is your approximate living space in sq. ft. (where the pet will live)?
          <input
            class="livingSpaceInput"
            id="livingSpaceId"
            min="0"
            placeholder="no decimals"
            type="number"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <p
          class="question"
        >
          <span
            class="required"
          >
            *
          </span>
           Please include any of the followings that is a member of your current household.
        </p>
        <label
          for="householdMemberYes"
        >
          <input
            id="householdMemberYes"
            name="householdMemberGeneral"
            required=""
            type="radio"
            value="childrenOrPets"
          />
           Children or Pets
        </label>
        <label
          for="householdMemberNone"
        >
          <input
            id="householdMemberNone"
            name="householdMemberGeneral"
            type="radio"
            value="none"
          />
           None of the above
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <p
          class="question"
        >
          Which would be the best way to reach you?
        </p>
        <label
          for="byPhoneId"
        >
          <input
            id="byPhoneId"
            name="contactWay"
            type="radio"
            value="phone"
          />
           Phone
          <label
            class="hiddenInput"
            for="contactTimeId"
          >
            Best time to call you?
            <input
              id="contactTimeId"
              name="contactTime"
              placeholder="optional"
              type="text"
            />
          </label>
        </label>
        <label
          for="byEmailId"
        >
          <input
            id="byEmailId"
            name="contactWay"
            type="radio"
            value="email"
          />
           Email
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <p
          class="question"
        >
          <span
            class="required"
          >
            *
          </span>
           Do you have any experience with the type of animal which you applying for adoption?
        </p>
        <label
          for="yesExperience"
        >
          <input
            id="yesExperience"
            name="petExperience"
            required=""
            type="radio"
            value="yes"
          />
           Yes
        </label>
        <label
          for="noExperience"
        >
          <input
            id="noExperience"
            name="petExperience"
            type="radio"
            value="no"
          />
           No
        </label>
      </div>
      <br />
      <div
        class="formBtnContainer"
      >
        <input
          class="submitBtn"
          type="submit"
          value="Submit"
        />
        <a
          class="cancelBtn"
          href="/petlist"
        >
          Cancel
        </a>
      </div>
    </form>
  </div>
</div>
`;

exports[`Form tests renders correctly after selecting Yes in Pet Experience 1`] = `
<div>
  <div
    class="formPageContainer"
  >
    <form
      class="formContainer"
    >
      <h2>
        Adoption Application
      </h2>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="firstNameId"
        >
          <span
            class="required"
          >
            *
          </span>
           First Name:
          <input
            id="firstNameId"
            name="firstName"
            required=""
            type="text"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="lastNameId"
        >
          <span
            class="required"
          >
            *
          </span>
           Last Name:
          <input
            id="lastNameId"
            name="lastName"
            required=""
            type="text"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="emailId"
        >
          <span
            class="required"
          >
            *
          </span>
           Email:
          <input
            id="emailId"
            name="email"
            placeholder="name@email.com"
            required=""
            type="email"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="phoneId"
        >
          <span
            class="required"
          >
            *
          </span>
           Phone:
          <input
            id="phoneId"
            name="phone"
            pattern="[0-9]{10}"
            placeholder="1234567890"
            required=""
            type="tel"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="petListId"
        >
          <span
            class="required"
          >
            *
          </span>
           Interested Animal(s) :
          <select
            class="petSelect"
            id="petListId"
            multiple=""
            name="petList"
            required=""
          >
            <option
              value="any"
            >
              All / No Particular
            </option>
            <option
              value="11111"
            >
              Apollo
            </option>
          </select>
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <p
          class="question"
        >
          <span
            class="required"
          >
            *
          </span>
           What is the type of your current residence (where the pet will live)?
        </p>
        <label
          for="apartment"
        >
          <input
            id="apartment"
            name="residenceType"
            required=""
            type="radio"
            value="yes"
          />
           Apartment/Condo
        </label>
        <label
          for="house"
        >
          <input
            id="house"
            name="residenceType"
            type="radio"
            value="yes"
          />
           House
        </label>
        <label
          for="otherResidence"
        >
          <input
            id="otherResidence"
            name="residenceType"
            type="radio"
            value="yes"
          />
           Other
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="livingSpaceId"
        >
          What is your approximate living space in sq. ft. (where the pet will live)?
          <input
            class="livingSpaceInput"
            id="livingSpaceId"
            min="0"
            placeholder="no decimals"
            type="number"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <p
          class="question"
        >
          <span
            class="required"
          >
            *
          </span>
           Please include any of the followings that is a member of your current household.
        </p>
        <label
          for="householdMemberYes"
        >
          <input
            id="householdMemberYes"
            name="householdMemberGeneral"
            required=""
            type="radio"
            value="childrenOrPets"
          />
           Children or Pets
        </label>
        <label
          for="householdMemberNone"
        >
          <input
            id="householdMemberNone"
            name="householdMemberGeneral"
            type="radio"
            value="none"
          />
           None of the above
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <p
          class="question"
        >
          Which would be the best way to reach you?
        </p>
        <label
          for="byPhoneId"
        >
          <input
            id="byPhoneId"
            name="contactWay"
            type="radio"
            value="phone"
          />
           Phone
        </label>
        <label
          for="byEmailId"
        >
          <input
            id="byEmailId"
            name="contactWay"
            type="radio"
            value="email"
          />
           Email
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <p
          class="question"
        >
          <span
            class="required"
          >
            *
          </span>
           Do you have any experience with the type of animal which you applying for adoption?
        </p>
        <label
          for="yesExperience"
        >
          <input
            id="yesExperience"
            name="petExperience"
            required=""
            type="radio"
            value="yes"
          />
           Yes
        </label>
        <label
          for="noExperience"
        >
          <input
            id="noExperience"
            name="petExperience"
            type="radio"
            value="no"
          />
           No
        </label>
      </div>
      <br />
      <div
        class="formBtnContainer"
      >
        <input
          class="submitBtn"
          type="submit"
          value="Submit"
        />
        <a
          class="cancelBtn"
          href="/petlist"
        >
          Cancel
        </a>
      </div>
    </form>
  </div>
</div>
`;

exports[`Form tests renders correctly with no pet 1`] = `
<div>
  <div
    class="formPageContainer"
  >
    <form
      class="formContainer"
    >
      <h2>
        Adoption Application
      </h2>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="firstNameId"
        >
          <span
            class="required"
          >
            *
          </span>
           First Name:
          <input
            id="firstNameId"
            name="firstName"
            required=""
            type="text"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="lastNameId"
        >
          <span
            class="required"
          >
            *
          </span>
           Last Name:
          <input
            id="lastNameId"
            name="lastName"
            required=""
            type="text"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="emailId"
        >
          <span
            class="required"
          >
            *
          </span>
           Email:
          <input
            id="emailId"
            name="email"
            placeholder="name@email.com"
            required=""
            type="email"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="phoneId"
        >
          <span
            class="required"
          >
            *
          </span>
           Phone:
          <input
            id="phoneId"
            name="phone"
            pattern="[0-9]{10}"
            placeholder="1234567890"
            required=""
            type="tel"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="petListId"
        >
          <span
            class="required"
          >
            *
          </span>
           Interested Animal(s) :
          <select
            class="petSelect"
            id="petListId"
            multiple=""
            name="petList"
            required=""
          >
            <option
              value="any"
            >
              All / No Particular
            </option>
            <option
              value="11111"
            >
              Apollo
            </option>
          </select>
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <p
          class="question"
        >
          <span
            class="required"
          >
            *
          </span>
           What is the type of your current residence (where the pet will live)?
        </p>
        <label
          for="apartment"
        >
          <input
            id="apartment"
            name="residenceType"
            required=""
            type="radio"
            value="yes"
          />
           Apartment/Condo
        </label>
        <label
          for="house"
        >
          <input
            id="house"
            name="residenceType"
            type="radio"
            value="yes"
          />
           House
        </label>
        <label
          for="otherResidence"
        >
          <input
            id="otherResidence"
            name="residenceType"
            type="radio"
            value="yes"
          />
           Other
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="livingSpaceId"
        >
          What is your approximate living space in sq. ft. (where the pet will live)?
          <input
            class="livingSpaceInput"
            id="livingSpaceId"
            min="0"
            placeholder="no decimals"
            type="number"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <p
          class="question"
        >
          <span
            class="required"
          >
            *
          </span>
           Please include any of the followings that is a member of your current household.
        </p>
        <label
          for="householdMemberYes"
        >
          <input
            id="householdMemberYes"
            name="householdMemberGeneral"
            required=""
            type="radio"
            value="childrenOrPets"
          />
           Children or Pets
        </label>
        <label
          for="householdMemberNone"
        >
          <input
            id="householdMemberNone"
            name="householdMemberGeneral"
            type="radio"
            value="none"
          />
           None of the above
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <p
          class="question"
        >
          Which would be the best way to reach you?
        </p>
        <label
          for="byPhoneId"
        >
          <input
            id="byPhoneId"
            name="contactWay"
            type="radio"
            value="phone"
          />
           Phone
        </label>
        <label
          for="byEmailId"
        >
          <input
            id="byEmailId"
            name="contactWay"
            type="radio"
            value="email"
          />
           Email
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <p
          class="question"
        >
          <span
            class="required"
          >
            *
          </span>
           Do you have any experience with the type of animal which you applying for adoption?
        </p>
        <label
          for="yesExperience"
        >
          <input
            id="yesExperience"
            name="petExperience"
            required=""
            type="radio"
            value="yes"
          />
           Yes
        </label>
        <label
          for="noExperience"
        >
          <input
            id="noExperience"
            name="petExperience"
            type="radio"
            value="no"
          />
           No
        </label>
      </div>
      <br />
      <div
        class="formBtnContainer"
      >
        <input
          class="submitBtn"
          type="submit"
          value="Submit"
        />
        <a
          class="cancelBtn"
          href="/petlist"
        >
          Cancel
        </a>
      </div>
    </form>
  </div>
</div>
`;

exports[`Form tests renders correctly with single pet 1`] = `
<div>
  <div
    class="formPageContainer"
  >
    <form
      class="formContainer"
    >
      <h2>
        Adoption Application
      </h2>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="firstNameId"
        >
          <span
            class="required"
          >
            *
          </span>
           First Name:
          <input
            id="firstNameId"
            name="firstName"
            required=""
            type="text"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="lastNameId"
        >
          <span
            class="required"
          >
            *
          </span>
           Last Name:
          <input
            id="lastNameId"
            name="lastName"
            required=""
            type="text"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="emailId"
        >
          <span
            class="required"
          >
            *
          </span>
           Email:
          <input
            id="emailId"
            name="email"
            placeholder="name@email.com"
            required=""
            type="email"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="phoneId"
        >
          <span
            class="required"
          >
            *
          </span>
           Phone:
          <input
            id="phoneId"
            name="phone"
            pattern="[0-9]{10}"
            placeholder="1234567890"
            required=""
            type="tel"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="petListId"
        >
          <span
            class="required"
          >
            *
          </span>
           Interested Animal(s) :
          <select
            class="petSelect"
            id="petListId"
            multiple=""
            name="petList"
            required=""
          >
            <option
              value="any"
            >
              All / No Particular
            </option>
            <option
              value="11111"
            >
              Apollo
            </option>
          </select>
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <p
          class="question"
        >
          <span
            class="required"
          >
            *
          </span>
           What is the type of your current residence (where the pet will live)?
        </p>
        <label
          for="apartment"
        >
          <input
            id="apartment"
            name="residenceType"
            required=""
            type="radio"
            value="yes"
          />
           Apartment/Condo
        </label>
        <label
          for="house"
        >
          <input
            id="house"
            name="residenceType"
            type="radio"
            value="yes"
          />
           House
        </label>
        <label
          for="otherResidence"
        >
          <input
            id="otherResidence"
            name="residenceType"
            type="radio"
            value="yes"
          />
           Other
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <label
          class="question"
          for="livingSpaceId"
        >
          What is your approximate living space in sq. ft. (where the pet will live)?
          <input
            class="livingSpaceInput"
            id="livingSpaceId"
            min="0"
            placeholder="no decimals"
            type="number"
          />
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <p
          class="question"
        >
          <span
            class="required"
          >
            *
          </span>
           Please include any of the followings that is a member of your current household.
        </p>
        <label
          for="householdMemberYes"
        >
          <input
            id="householdMemberYes"
            name="householdMemberGeneral"
            required=""
            type="radio"
            value="childrenOrPets"
          />
           Children or Pets
        </label>
        <label
          for="householdMemberNone"
        >
          <input
            id="householdMemberNone"
            name="householdMemberGeneral"
            type="radio"
            value="none"
          />
           None of the above
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <p
          class="question"
        >
          Which would be the best way to reach you?
        </p>
        <label
          for="byPhoneId"
        >
          <input
            id="byPhoneId"
            name="contactWay"
            type="radio"
            value="phone"
          />
           Phone
        </label>
        <label
          for="byEmailId"
        >
          <input
            id="byEmailId"
            name="contactWay"
            type="radio"
            value="email"
          />
           Email
        </label>
      </div>
      <div
        class="inputContainer"
      >
        <p
          class="question"
        >
          <span
            class="required"
          >
            *
          </span>
           Do you have any experience with the type of animal which you applying for adoption?
        </p>
        <label
          for="yesExperience"
        >
          <input
            id="yesExperience"
            name="petExperience"
            required=""
            type="radio"
            value="yes"
          />
           Yes
        </label>
        <label
          for="noExperience"
        >
          <input
            id="noExperience"
            name="petExperience"
            type="radio"
            value="no"
          />
           No
        </label>
      </div>
      <br />
      <div
        class="formBtnContainer"
      >
        <input
          class="submitBtn"
          type="submit"
          value="Submit"
        />
        <a
          class="cancelBtn"
          href="/petlist"
        >
          Cancel
        </a>
      </div>
    </form>
  </div>
</div>
`;
